--- a/Java/220426_Java 내용정리.md
+++ b/Java/220426_Java 내용정리.md
@@ -9,16 +9,20 @@ studentIDs[2]
 -> 배열의 요소: 배열 내부에 있는 값
 -> 배열의 요소서에 접근하는 방법: 인덱스 활용
 
+# 22.04.26 Java 수업 내용정리
+---
+
 ### 객체 지향 프로그래밍(Object Oriented Programing)
 
 ### 1. 객체란?
+객체란 사전적 의미는 '의사나 행위가 미치는 대상'이라고 한다.
+우리가 주변에서 볼 수 있는 사물을 모두 객체라고 생각을 할 수 있다.
+또한 우리의 눈으로 보이지 않는 것도 객체가 될 수 있다. 주문, 생산, 관리 등 어떤 행동을 나타내는 단어도 객체가 될 수 있다.
 
-## 主體(Subject) vs **客體(Object)**
+#### 주체(Subject) vs **객체(Object)**
 
 나는 주체, 객체는 나를 제외한 모든 것.
-
 다른 사람 입장에서는 내가 객체.
-
 영어에서 문장의 5형식
 
 ### 2. 기존의 프로그래밍 패러다임
@@ -26,12 +30,16 @@ studentIDs[2]
 2-1. **절차 지향 프로그래밍**
 
 **기본 사상, 지향점** : 함수를 통해 코드를 논리적인 단위로 구분하고 분할해서 정복(Divide and Conquer)하자.
+만약 내가 사는 곳에서 강남까지 간다고 생각해보자. 
+순서로는 집을 나선다. -> 버스를 탄다. -> 요금을 지불한다. -> 강남역에 도착한다. 
+이와 같이 순서대로 일어나는 일을 시간순으로 프로그래밍을 하는 것을 절차 지향 프로그래밍이라고 한다.
 
 2-2. **객체 지향 프로그래밍(Object Oriented Programming, OOP)**
 
-세상에 존재하는 모든 것은 **'사물(Object)'**
+세상에 존재하는 모든 것은 **'사물(Object)'**을 가지고 프로그래밍을 한다!
 
-이러한 사물들을 각각의 코드로 작성할 수 있지 않을까?
+앞서 말한 강남까지 가는 상황에서 대상이 되는 객체는 나, 집, 버스, 강남역, 요금이라고 생각하고, 이렇게 정의한 객체 간 협력을 프로그래밍한 것이 객체 지향 프로그래밍이다.
+또 여기서 '집을 나선다'는 행동은 '나'라는 객체와 '집'이라는 객체가 있어 내가 집을 나서는 협력이 이루어진다. 이렇듯 객체 지향 프로그램은 먼저 객체를 만들고 객체 사이에 일어나는 일을 구현하는 것이다.
 
 
 **따라서 객체 지향이란,**
@@ -40,24 +48,15 @@ studentIDs[2]
 2. 각각의 사물(인스턴스)은 고유함.
    - 인스턴스(instance) : 고유한 값들(각각의 객체를 일컫음.) -> new라는 매서드를 사용해서 객체를 생성
 
-```java
-class Person {
-	String name; // 속성, Member field
+### 3. Class, Object, Instance
 
-	public void work() { // 행위, Member Method
-		System.out.println(name + "이(가) 걷고 있습니다.");
-	}
-}
-
-Person y = new Person("Yoo");
-// y는 "you" 라고 하는 고유한 사람들이 들어있음.
-Peron h = new Person("Hong");
-
-System.out.println(y == h); //false, 서로 다른 사람이기 때문에 같지 않다.
-```
-> - 모든 객체는 속성과 행위를 가지고 있음.
-> - 여기서 Person의 class 는 실체하지 않은 분류의 개념이라고 생각해야한다.
-> - 분류에 개념이기 때문에 구체적인 개념을 담고 있으면 위험하다는 것을 알고있어야 한다.
+3-1. **Class**
+- 개념
+  - 객체를 정의하고 만들어 내기 위한 설계도
+  - 연관되어 있는 변수와 메서드의 집합
+  - 객체의 상태를 나타내는 필드(field)와 객체의 행동을 나타내는 메소드(method) 를 코드로 구현한 것이다.
+  - 필드란 클래스에 포함된 변수(variable)을 의미한다.
+  - 메소드는 어떠한 특정 작업을 수행하기 위한 명령문의 집합
 
 **객체 지향 프로그래밍에서 가장 중요한 개념 '추상화'**
 
@@ -68,113 +67,119 @@ System.out.println(y == h); //false, 서로 다른 사람이기 때문에 같지
 > attribute = property = member variable = field = state
 > behavior = method = member function = operation
 
+3-2. **Object**
+- 개념
+  - 설계도에서 만들어낸 제품이라고 생각하면된다.
+  - 클래스에 선언된 모양 그대로 생성된 실체
+- 특징
+  - '클래스의 인스턴스(instance)'
+  
+3-3. **Instance**
+- 개념
+  - 설계도를 바탕으로 소프트웨어 세계에 구현된 구체적인 실체
+    - 즉, 객체를 소프트웨어에 실체화 하면 그것을 '인스턴스' 라고 부른다.
+    - 실체화된 인스턴스는 메모리에 할당된다.
+- 특징
+  - 인스턴스는 객체에 포함된다고 볼 수 있다.
+  - OOP의 관점에서 객체가 메모리에 할당되어 실제 사용될 때 '인스턴스'라고 부른다.
+    - 즉, 인스턴스라는 용어는 반드시 클래스와 객체 사이의 관계로 한정지어서 사용할 필요는 없다.
+  - 인스턴스는 어떤 추상적인 개념으로 부터 '생성된 복제본'을 의미한다.
+
+**예시**
+```java
+//Person.java 
+//Person class 생성 
+class Person {
+	String name; // 속성, Member field, 멤버 변수 선언
+
+	public void work() { // 행위, Member Method
+		System.out.println(name + "이(가) 걷고 있습니다.");
+	}
+}
+```
+```java
+//App.java
+
+Person y = new Person("Yoo"); // Person 이라는 클래스에 y라는 인스턴스를 생성
+// y는 "you" 라고 하는 고유한 사람들이 들어있음.
+Peron h = new Person("Hong");
+
+System.out.println(y == h); //false, 서로 다른 사람이기 때문에 같지 않다.
+```
+> - 모든 객체는 속성과 행위를 가지고 있음.
+> - 여기서 Person의 class 는 실체하지 않은 분류의 개념이라고 생각해야한다.
+> - 분류에 개념이기 때문에 구체적인 개념을 담고 있으면 위험하다는 것을 알고있어야 한다.
+
+
 **다른 예시**
 
-강아지, 개 클래스
+1. Dog 클래스를 생성
 
-속성 : age, color, weight, 
+1. 클래스의 멤버변수 : name, age, color, weight 선언하기
 
-행위 : 움직인다( ), 사료를 먹는다(), 잔다()
-**class 생성**
+2. Dog의 모든 멤버변수를 가져오는 생성자함수 생성 할 것
+
+3. Dog의 정보값들을 출력하는 메서드를 생성할 것 
+
+4. Dog타입의 변수 coco에 생성한 인스턴스 값 할당하기
+
+**[최종 출력 값 : "코코", 2, "회색", 5.5]**
+
+
+
+**Dog class 생성**
 ```java
-public class Dog { // java에서 모든 요소가 클래스 내부에 있어야한다. 외부에는 package선언과 import 문장외에 아무것도 선언하지 않습니다.
+public class Dog { // java에서 모든 요소가 클래스 내부에 있어야한다. 외부에는 package선언과 import 문장외에 아무것도 선언하지 않는 점을  명심하자.
 	    String name;
 	    int age;
 	    String color;
 	    double weight;
 	    
+        //모든 멤버 변수를 가져오는 생성자 함수를 생성
 	    public Dog(String name, int age, String color, double weight) {
 			this.name = name;
 			this.age = age;
 			this.color = color;
 			this.weight = weight;
+            //멤버변수와 생성자 함수의 인자값을 할당하기 위해 가시적으로 표현할 뿐, 다른 변수이다.
 			
 		}
-	    
-	    public void move() {
-	        System.out.println(name + "댕댕이가 걷고있습니다.");
-	    }
-
-	    public void eat() {
-	        System.out.println(name + "댕댕이가 먹고 있습니다.");
-	    }
-
-	    public void sleep() {
-	        System.out.println(name + "댕댕이가 쿨쿨 자고 있습니다.");
-	    }
+	    // 값이 출력되도록 진행해주는 메서드 생성
+	    public void showDog() {
+	        System.out.println(name + "," + age + "," + color + "," + weight);
+        }
 }
 ```
-**object 생성**
+**object & instance 생성**
 ```java
 //객체 생성
-//인스턴스를 생성하기 위해서는 new키워드와 함께 클래스 명() 기술한다
+//인스턴스를 생성하기 위해서는 new키워드와 함께 클래스 명()기술한다
 //new 클래스명 ("코코",2,"회색",5.5) -> 하나의 인스턴스 생성
-
 // Dog타입의 변수는 coco에 생성한 인스턴스 값 할당
-//타입 변수명
- //자체가 값이기 때문에 별도의 변수에 저장을 하지 않으면 다음 줄의 코드부터는 활용이 불가능
-
-Dog coco = new Dog("코코", 8,"회색", 5.5);
+//자체가 값이기 때문에 별도의 변수에 저장을 하지 않으면 다음 줄의 코드부터는 활용이 불가능
+public static void main(String[] args) {
+    Dog coco = new Dog("코코", 8,"회색", 5.5); 
+    coco.showDog(); //showDog() 매서드를 사용하여 값을 화면에 출력
+}
 ```
-
-**class & Object**
-### **class Person**
-
-**사람이 가진 속성(property, attribute, 멤버 필드) - 객체 멤버 필드, 클래스 멤버 필드(static 변수,정적 변수)**
-
-
-
-1. 나이(age)
-1. 몸무게(kg)
-1. 키(height)
-
-**사람이 하는 행위(기능, method, fuction)**
-
-1. 먹다(eat())
-1. 자다(sleep())
-1. 울다(cry())
-
-등 등..
-
-**사람 클래스를 활용하여 박서준 객체 생성**
-
-**박서준 객체(인스턴스) 정보**
-
-**속성**
-
-나이 : 25
-몸무게 : 77
-키 : 180
-
-**행위** 
-
-먹다, 자다, 울다
-
-**붕어빵(객체) vs 붕어빵 틀(클래스)?**
-
-클래스 : 개(Dog), 사람(Person), 고양이(Cat), 시계, 음료
-
-클래스는 분류에 대한 개념이지, 실체하지 않음.(사람, 펭귄)
-
-객체(인스턴스)는 실체함.(박서준, 뽀로로, 한소희, 핑구)
--> 실체하는 것은 "인스턴스"
-
 ---
 
 ### 정리하자면..
 
-클래스(class) : 어떤 객체를 생성하기 위한 설계도 설계도가 없으면 객체나 인스턴스를 생성할 수 없음. 클래스는 객체에 비해 상대적으로 더 추상적인 레벨로 말할 때
+클래스(class) : 어떤 객체를 생성하기 위한 설계도이다. 
+설계도가 없으면 객체나 인스턴스를 생성할 수 없음. 클래스는 객체에 비해 상대적으로 더 추상적인 레벨로 말할 때
 
-객체(object) : 객체 지향 프로그래밍을 말할 떄 사용하기도 클래스에 비해 상대적으로 구체적인 레벨단에서 이야기할 때
+객체(object) : 객체 지향 프로그래밍을 말할 때 사용하기도 클래스에 비해 상대적으로 구체적인 레벨단에서 이야기할 때
 Dog 객체, Person 객체...
 
 인스턴스(instance) : 해당 클래스를 통해 실제로 생성된 고유한(세상에 유일무이하게 존재하는) 값 그 자체를 의미할 때
-가장 구체적인 값
+즉 가장 구체적인 값이다.
 
 객체지향프로그래밍 필요한 이유: class를 하나를 만들어서 여러가지 인스턴스를 찍어낼수 있고, 코드의 재사용성이나, 중복을 줄이기 위함이다.
 
-### Method
-다른 객체가 가지고 있는 메서드를 다른 객체가 호출 할 수 있도록 작성한다면 method를 통해서 사람과 개가 서로 통신, 협력(메시지를 주고 받고 있음) -> 객체의 "협력"
+### 4.Method
+다른 객체가 가지고 있는 메서드를 다른 객체가 호출 할 수 있도록 작성한다면 method를 통해서 객체와 객체가 서로 통신, 협력(메시지를 주고 받고 있음) -> 객체의 "협력"
+
 
 
 
