--- a/Java/220427_Java내용정리.md
+++ b/Java/220427_Java내용정리.md
@@ -1,6 +1,6 @@
-# 22.04.25 Java 수업 내용정리
+# 22.04.25 Java 수업 내용정리:memo:
 ---
-## 참조 변수 사용하기
+## 참조 변수 사용하기 :open_file_folder:
 
 ```java
 Mouse mickey = new Mouse();
@@ -99,7 +99,7 @@ public class Student {
 }
 ```
 ---
-## Overloading(method)
+## Overloading(method) :truck:
 
 메소드 오버로딩(overloading)이란 같은 이름의 메소드를 중복하여 정의하는 것을 의미한다.
 
@@ -184,7 +184,7 @@ public class Person {
 
 ---
 
-## 접근 제어자(private, pubilc)
+## 접근 제어자(private, pubilc) :lock_with_ink_pen:
 - OOP에서 예약어를 사용해 클래스 내부의 변수나 메서드, 생성자에 대한 접근 권한을 지정할 수 있다
 - 이러한 예약어를 **접근제어자** 라고한다.
 ### 특징
@@ -218,7 +218,7 @@ public class Mouse {
 	}
 }
 ```
-### 정보은닉
+### 정보은닉:flashlight:
 -변수를 Public으로 선언한다는것은 외부 클래스에서 접근이 제한되지 않으므로 정보의 오류가 발생 할 수 있다. (ex. 날짜에서 일을 32로 값을 부여하는 오류)
 -이 때에 오류가 나더라도 그 값이 해당 변수에 대입되지 못하도록 하고 싶을 때 **Private** 접근제어자를 사용하는 것이고, 만약에 날짜에서 일을 잘못 입력했을 때에 잘못된 값반환을 하고 싶을 때 setter 메서드에 조건문을 추가하는 방법도 있다.
 **종류**
@@ -233,7 +233,7 @@ public class Mouse {
 
 ---
 
-## Static , instance 메서드 
+## Static , instance 메서드 :door:
 
 ### static 메서드
 >- 객체생성없이'클래스이름.매서드이름()' 으로 호출
@@ -284,7 +284,7 @@ public class App {
 		
 		Mouse mickey = new Mouse();
 		jerry.countOfTail = 2;
-		System.out.println("미키의 꼬리: " + mickey.countOfTail); // 미키의 countOfTail도 2로 바뀜 모든 인스턴스가 공유가 가능하므로
+		System.out.println("미키의 꼬리: " + mickey.countOfTail); // 미키의 countOfTail도 2로 바뀜 모든 인스턴스가 공유가 가능하기 때문이다.
 		
 	}
 
