--- a/Java/220428_Java내용정리.md
+++ b/Java/220428_Java내용정리.md
@@ -94,7 +94,7 @@ System.out.println(noName);
 
 모든 내용을 담고 있는 코드예시를 통해서 앞서 말한 상속에 관련된 메서드의 특징과 예약어, 로직에 대해 설명 하도록 하겠다.
 
-> 코드 내용 **Customer**이라는 상위클래스와 하위클래스인 **VIPCustomer**클래스에서 상위클래스에는 기본적인 고객의 정보를 포함하고 있고, 하위클래스는 고객 집단 중 우수 고객을 상대로 추가적인 기능을 만든 내용이다.  
+> 코드 내용: **Customer**이라는 상위클래스와 하위클래스인 **VIPCustomer**클래스에서 상위클래스에는 기본적인 고객의 정보를 포함하고 있고, 하위클래스는 고객 집단 중 우수 고객을 상대로 추가적인 기능을 만든 내용이다.  
 
 ```java
 //Customer.java
