--- a/Java/220428_Java내용정리.md
+++ b/Java/220428_Java내용정리.md
@@ -306,13 +306,14 @@ public class TestA {
 		TestA a2 = new TestA();// a2 참조변수에 인스턴스 생성
 		a2.aaa();
 ```
-> main()함수가 실행되면 지역 변수는 스택 메모리에 위치합니다. 그리고 각 참조 변수 a1과 a2가 가르키는 인스턴스는 힙메모리에 생성됩니다.
->  메서드의 명령 집합은 메서드 영역에 위치합니다. 우리가 메서드를 호출하면 메서드 영역의 주소를 참조하여 명령이 실행됩니다. 
-여기서 중요한점은 메서드의 영역이 별개로 존재해서 인스턴스각 각기 다르게 생성되어도 동일한 메서드가 호출된다는 것이다.
+> main()함수가 실행되면 지역 변수는 스택 메모리에 위치하게 된다. 
+> 각 참조 변수 a1과 a2가 가르키는 인스턴스는 힙메모리에 생성된다.
+>  메서드의 명령 집합은 메서드 영역에 위치하고 있고, 우리가 메서드를 호출하면 메서드 영역의 주소를 참조하여 명령이 실행이 된다. 
+> 여기서 중요한점은 메서드의 영역이 별개로 존재해서 인스턴스들이 각기 다르게 생성되어도 동일한 메서드가 호출된다는 것이다.
 
 ### 가상 메서드의 원리
--  프로그램에서 메서드를 호출한다는 것은 그 메서드의 명령집합이 있는 메모리 위치를 참조하여 멸렁을 실행 하는 것이다.
-- 가상메서드의 경우에는 '가상 메서드테이블'이 만들어 진다.
+- 프로그램에서 메서드를 호출한다는 것은 그 메서드의 명령집합이 있는 메모리 위치를 참조하여 명령을 실행 하는 것이다.
+- 가상메서드의 경우에는 '가상 메서드테이블'이 만들어진다.
 	- 가상 메서드  테이블은  각 메서드 이름과 실제 메모리 주소가 짝을 이루고 있다.
 	- 어떤 메서드가 호출이 되면 이 테이블에서 주소값을 찾아서 해당 메서드이 명령을 수행한다.
 
@@ -386,7 +387,7 @@ public class AnimalTest1 {
 	}
 }
 ```
->	상속받은 클래스가 매개변수로 넘어오면 모두  Animal형변환이 이루어져 animal.move()메서드를 호출가능.
+> 상속받은 클래스가 매개변수로 넘어오면 모두 Animal 형변환이 이루어져 animal.move()메서드를 호출가능.
 > 이후 가상 메서드의 원리에 따라 각 인스턴스에 있는 메서드를 호출한다.
 > animal.move()의 코드는 변함이 없지만 인스턴스의 자료형이  무엇인지에 따라 서로 다른 메서드가 호출된다.(상속과 가상메서드의 개념이 혼합)
 
