--- a/Java/220428_Java내용정리.md
+++ b/Java/220428_Java내용정리.md
@@ -77,7 +77,7 @@ System.out.println(noName);
 
 - 부모에게 재산을 상속받으면 상속받은 재산을 자신의 것을 사용할 수 있다.
 
-- 만약 B클래스가 A 클래스를 상속받으면 B클래스는 A클래스의 멤버 변수와 메서드를 사용 할 수 있습니다.
+- 만약 B클래스가 A 클래스를 상속받으면 B클래스는 A클래스의 멤버 변수와 메서드를 사용 할 수 있다.
 
 - 프로그램을 유지보수하기 편하고 수정하거나 새로운 내용을 추가하는 것이 유연하다.
 
@@ -156,27 +156,20 @@ public class Customer {
 		return customerName + "님의 등급은 " + customerGrade + "이며 , 보너스 포인트는 " + bonusPoint + "점 입니다.";
 	}
 
-	// if 새로운 고객 등급이 필요한경우 우수고객 등급은 VIP클래스로 만들고, 혜택은 제품을 살 때 항상 10% 할인 해줍니다. 보너스
-	// 포인트를 5%를 적립, 담당 전문 상담원을 배정.
-	// VIP class를 따로 만들어 VIP고객에만 해당하는 기능을 수행하도록 하자.
-}
 ``` 
 
 ```java
 //VIPCustomer.java
 package inheritance;
 
-//if 새로운 고객 등급이 필요한경우 우수고객 등급은 VIP클래스로 만들고, 혜택은 제품을 살 때 항상 10% 할인 해줍니다. 보너스 포인트를 5%를 적립, 담당 전문 상담원을 배정.
-public class VIPCustomer extends Customer { // VIPCustomer 클래스는 Customer 클래스를 상속받음. 그럼 기본적을 가지고 있는 고객속성에 해당하는 것들을 다시쓰는
-											// 행위를 안해도됨.
-
+//if 새로운 고객 등급이 필요한경우 우수고객 등급은 VIP클래스로 만들고, 혜택은 제품을 살 때 항상 10% 할인 해줌. 보너스 포인트를 5%를 적립, 담당 전문 상담원을 배정.
+public class VIPCustomer extends Customer { // VIPCustomer 클래스는 Customer 클래스를 상속받음. 그럼 기본적을 가지고 있는 고객속성에 해당하는 것들을 다시쓰는 행위를 안해도됨.
 	// 멤버변수 선언
 	private int agentID; // VIP를 위한 담당 전문 상담원 아이디
 	double saleRatio; // 할인율
 
 	// 디폴트 생성자(우수고객 등급은 VIP,10% 할인,보너스 포인트를 5%를 적립)
-	public VIPCustomer(int customerID, String customerName, int agentID) { // 만약에 customerID, customerName를 가지는 생성자 함수
-																			// Customer 생성자 함수 에서 매개변수를 super로 받아와야한다.
+	public VIPCustomer(int customerID, String customerName, int agentID) {
 		super(customerID, customerName); // 상위 클래스 (ID, Name) 매개변수가 있는 상위 클래스의 생성자를 직접 호출
 		this.agentID = agentID;
 		customerGrade = "VIP";// 고객등급은 VIP
@@ -312,7 +305,7 @@ public class TestA {
 > 여기서 중요한점은 메서드의 영역이 별개로 존재해서 인스턴스들이 각기 다르게 생성되어도 동일한 메서드가 호출된다는 것이다.
 
 ### 가상 메서드의 원리
-- 프로그램에서 메서드를 호출한다는 것은 그 메서드의 명령집합이 있는 메모리 위치를 참조하여 명령을 실행 하는 것이다.
+- 프로그램에서 메서드를 호출한다는 것은 그 메서드의 명령집합이 있는 메모리 위치를 참조하여 명령을 실행하는 것이다.
 - 가상메서드의 경우에는 '가상 메서드테이블'이 만들어진다.
 	- 가상 메서드  테이블은  각 메서드 이름과 실제 메모리 주소가 짝을 이루고 있다.
 	- 어떤 메서드가 호출이 되면 이 테이블에서 주소값을 찾아서 해당 메서드이 명령을 수행한다.
@@ -349,7 +342,8 @@ public class OverridingTest3 {
 
 ###  앞서 설명한 묵시적 클래스 형 변환과 가상 메서드를  바탕으로 객체 지향의 중요한 특성인 다형성을 알아보자.
 다형성이란, 하나의 코드가 여러 자료형으로 구현되어 실행 되는 것이다.   
-즉 같은 코드에서 여러 실행 결과가 나오는 것이다.
+**즉 같은 코드에서 여러 실행 결과가 나오는 것이다.**
+
 ```java
 class Animal {//Animal superclass 생성
 	public void move() {
