--- a/Java/220502_Java내용정리.md
+++ b/Java/220502_Java내용정리.md
@@ -1,6 +1,6 @@
-﻿# 220502_Java내용정리
+# 220502_Java내용정리 :memo:
 
-## 추상 클래스, 메서드
+## 추상 클래스, 메서드 :hammer:
 추상 클래스는 완전하지 않은 클래스이다. 완전하지 않다는 것이 부족하다는는 뜻일 수도 있다.   
 한편으로는 가능성이 남아 있다는 의미이다.  추상클래스의 사용법과 클래스안 생성되는 추상 메서드의 사용법을 알아보자.
 
@@ -16,7 +16,7 @@
 **구현 코드**
 > Animal클래스가 추상 클래스이고, 안에 sing()이라는 추상 메서드가 있다. 
 > Cat,Dog,Mouse 클래스가 Animal클래스를 상속을 받는다.
-> 추상 클래스 Animal을 상속받은 하위클래스들은 Animal 클래스의 추상메서드(Animal.sing())의 구현이 강제되어 오버라이딩 통해구현부 부분을 작성함.
+> 추상 클래스 Animal을 상속받은 하위클래스들은 Animal 클래스의 추상메서드(Animal.sing())의 구현이 강제되어 오버라이딩 통해 구현부 부분을 작성함.
 ```java
 // Animal.java
 public abstract class Animal {
@@ -73,7 +73,7 @@ public class App {
 }
 ```
 
-## 인터페이스
+## 인터페이스 :nut_and_bolt:	
 - 만약에 하나의 클래스가 여러 인터페이스를 받을 수 있다.
 
 ### 인터페이스 특징
@@ -87,7 +87,7 @@ public class App {
 **구현 코드**
 > 인터페이스인 Calc에 상수인 PI, ERROR가 있고, 각각의 상수값을 3.14, -99999 할당한다.
 > 추상 메서드를 더하기(add), 빼기(substract), 곱하기(times), 나누기(divide)를 선언한다.
-> 인터페이스를 구현하는 **구현체 클래스(CompleteCalc)**에서  각각의 메서드를 오버라이딩하여 기능을 구현한다.
+> 인터페이스를 구현하는 **구현체 클래스(CompleteCalc)** 에서 각각의 메서드를 오버라이딩하여 기능을 구현한다.
 > 마지막으로 App.java 파일에서 인스턴스를 생성하고 출력
 ```java
 //Calc.java
