--- a/Java/220503_Java내용정리.md
+++ b/Java/220503_Java내용정리.md
@@ -48,11 +48,11 @@ public class Ex1 {
 ```
 출력값
 >14
-50
-12
-11
-Exception in thread "main" java.lang.ArithmeticException: / by zero
-	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료
+>50
+>12
+>11
+>Exception in thread "main" java.lang.ArithmeticException: / by zero
+>	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료
 ```java
 public class Ex2 {
 	public static void main(String[] args) {
@@ -79,17 +79,17 @@ public class Ex2 {
 ```
 출력값
 >12
-20
-20
-20
-14
-분모에 0이 들어가면 안됩니다.
-java.lang.ArithmeticException: / by zero 
-14
-25
-20
-11
-//예외가 발생하더라고 내가 원하는 프로그램 종료 없이 10번의 반복은 만족
+>20
+>20
+>20
+>14
+>분모에 0이 들어가면 안됩니다.
+>java.lang.ArithmeticException: / by zero 
+>14
+>25
+>20
+>11
+>//예외가 발생하더라고 내가 원하는 프로그램 종료 없이 10번의 반복은 만족
 
 ### **try-catch-finally block 예시**
 **코드내용**
@@ -122,11 +122,11 @@ public class Ex4 {
 ```
 출력값
 >method1() 호출되었음.
-java.lang.ArithmeticException: / by zero
-	at com.Ex4.method1(Ex4.java:15)
-	at com.Ex4.main(Ex4.java:7)
-method1() finally block이 실행 되었음.
-method1()의 수행 종료. main() 복귀
+>java.lang.ArithmeticException: / by zero
+>	at com.Ex4.method1(Ex4.java:15)
+>	at com.Ex4.main(Ex4.java:7)
+>method1() finally block이 실행 되었음.
+>method1()의 수행 종료. main() 복귀
 >이처럼 예외가 발생하더라도 처리후 마지막까지 프로그램이 계속 수행되었음을 알 수 있다.
 
 ### throws :hourglass:
@@ -156,14 +156,15 @@ public class MethodEx1 {
 	}
 }
 ```
-> 이처럼 어떤 메서드가 예외처리에 대해 떠맡게 되면 어디선가 처리가 되어야 한다. 그러지 않는 다면 오류를 발생하고 방치해놓는 것이다.
-멤버 메서드 method1에서 예외처리를 하려면
-		try {
-			method2();			
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
-이 코드로 수정하면 예외처리를 수행하는 것이다.
+> 이처럼 어떤 메서드가 예외처리에 대해 떠맡게 되면 어디선가 처리가 되어야 한다. 
+> 그러지 않는다면 오류를 발생하고 방치해놓는 것이다.
+> 멤버 메서드 method1에서 예외처리를 하려면
+>		try {
+>			method2();			
+>		} catch (Exception e) {
+>			e.printStackTrace();
+>		}
+>이 코드로 수정하면 예외처리를 수행하는 것이다.
 
 ### Checked Exception & Unchecked (Runtime)Exception :milky_way:
 * 이 두가지의 명확한 구분 기준은 예외처리를 필수성의 여부이다. 
