--- a/Java/220503_Java내용정리.md
+++ b/Java/220503_Java내용정리.md
@@ -11,12 +11,12 @@
 	- 이러한 시스템 오류는 프로그램에서 제어할 수 없다.
 2. 예외(exception)
 	- 예외는 프로그램에서 제어가 가능하다. 
-	- 프로그램에서 파일을 읽어 사용하려는데 파일이 없는 경우, 네트워크로 데이터를 전송하려는데 연경이 안 된 경우 등이 있다.
+	- 프로그램에서 파일을 읽어 사용하려는데 파일이 없는 경우, 네트워크로 데이터를 전송하려는데 연결이 안된 경우 등이 있다.
 
 자바에서 제공하는 오류 클래스 와  예외 클래스는 **Throwable** 클래스에서 상속 받는다. 
 #### Exception
 - 프로그램에서 처리하는 예외 클래스의 최상위 클래스는 **Exception**클래스이다.
-- 크게 사용 빈도가 높은 클래스는 입출력 예외 처리에 대한 클래스 **IOException** 과 실행 오류 예외 처리에 대한 클래스 **RuntimeException**이 있다. 
+- 크게 사용 빈도가 높은 클래스는 입출력 예외 처리에 대한 클래스 **IOException** 과 실행오류 예외처리에 대한 클래스 **RuntimeException**이 있다. 
 
 각각의 예외클래스의 세부 클래스는 코드를 통해 주석에 설명을 달아 놓겠다.
 ### try-catch-finally block  :recycle:
@@ -52,7 +52,7 @@ public class Ex1 {
 >12
 >11
 >Exception in thread "main" java.lang.ArithmeticException: / by zero
->	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료
+>	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료.
 ```java
 public class Ex2 {
 	public static void main(String[] args) {
@@ -89,13 +89,13 @@ public class Ex2 {
 >25
 >20
 >11
->//예외가 발생하더라고 내가 원하는 프로그램 종료 없이 10번의 반복은 만족
+>//예외가 발생하더라고 내가 원하는 프로그램 종료 없이 10번의 반복은 만족.
 
 ### **try-catch-finally block 예시**
 **코드내용**
 > class 메서드와 멤버 메서드를 각각 만들고, 멤버 메서드인 method1에서 try-catch-finally 로 예외 발생시 catch블록에서 예외 발생 메세지를 출력한다.
 > finally 블록에서는 예외처리 진행과 상관없이 진행되는 것을 try문에 return값을 넣어서 증명한다.
-> 마지막으로 클래스 메서드에서 최종적으로 마무리 짓는 출력문을 찍어 낸다.
+> 마지막으로 클래스 메서드에서 최종적으로 마무리 짓는 출력문을 찍어낸다.
 
 ```java
 public class Ex4 {
@@ -145,7 +145,7 @@ public class MethodEx1 {
 		method1();
 	}
 	// MethodEx1dml 멤버 메서드 2 
-	static void method1() throws Exception { // 이렇게 계속 예외처리를 떠넘기면 문법적 예외는 없겠지만 지금 예외에대해 처리가 안됐다. 
+	static void method1() throws Exception { // 이렇게 계속 예외처리를 떠넘기면 문법적 예외는 없겠지만 지금 예외에 대해 처리가 안됐다. 
 		method2();
 		System.out.println("method1() 호출");
 	}
