--- a/Java/220503_Java내용정리.md
+++ b/Java/220503_Java내용정리.md
@@ -47,12 +47,12 @@ public class Ex1 {
 }
 ```
 출력값
->14
->50
->12
->11
->Exception in thread "main" java.lang.ArithmeticException: / by zero
->	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료.
+>14   
+>50   
+>12   
+>11  
+>Exception in thread "main" java.lang.ArithmeticException: / by zero  
+>	at com.Ex1.main(Ex1.java:10) // 10번을 채 반복하지 못하고 종료.   
 ```java
 public class Ex2 {
 	public static void main(String[] args) {
@@ -172,7 +172,7 @@ public class MethodEx1 {
 * Checked Exception 는 컴파일 단계에서 예외가 발생하므로 명시적으로 예외처리를 해야한다.
 * Unchecked (Runtime)Exception 는 명시적으로 예외처리를 하지 않아도 된다. 대부분이 개발자의 부주의로 인한 발생이 대부분이, 예측하지 못했던 상황이 아님. (실행 과정 중에서 발견됨.)
 
-| | Plugin | README |
+| | Checked Exception | Unchecked (Runtime)Exception |
 |------ | ------ | ------ |
 |처리여부 | 반드시 예외를 처리 | 명시적인 처리를 강제 받지 않음|
 |확인시점 | 컴파일 단계 | 실행단계 |
