--- a/Java/220509_Java내용정리.md
+++ b/Java/220509_Java내용정리.md
@@ -24,3 +24,4 @@ cf.
 DAO(Data Access Object): Database부분에서 접근을 담당하는 클래스 
 Service :  별도의 로직 처리를 담당하는 별도의 클래스 및 패키지이다. 
 
+![enter image description here](https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Router-MVC-DB.svg/300px-Router-MVC-DB.svg.png)
