--- a/MySQL/220511_SQL내용정리.md
+++ b/MySQL/220511_SQL내용정리.md
@@ -202,7 +202,7 @@ SELECT first_name, last_name FROM actor;
 SELECT UPPER(CONCAT(first_name, ' ' , last_name)) AS 'Actor Name'   
 FROM actor;   
 
-4. actor 테이블에서 actor_id, first_name, last_name을 조회하되, first_name이 Joe인 데이터만 필터링하여 조회
+4. actor 테이블에서 actor_id, first_name, last_name을 조회하되, first_name이 Joe인 데이터만 필터링하여 조회   
 SELECT actor_id, first_name, last_name   
 FROM actor   
 WHERE first_name = 'Joe';   
@@ -219,12 +219,12 @@ FROM actor
 WHERE last_name LIKE '%LI%'   
 ORDER BY last_name, first_name ASC;   
 
-7. country 테이블에서 country_id, country 열을 조회하되, IN 연산자를 활용하여  country가 Afghanistan, Bangladesh, China 중에 속하는 데이터만 필터링하여 조회
+7. country 테이블에서 country_id, country 열을 조회하되, IN 연산자를 활용하여  country가 Afghanistan, Bangladesh, China 중에 속하는 데이터만 필터링하여 조회   
 SELECT country_id, country   
 FROM country   
 WHERE country IN ('Afghanistan', 'Bangladesh', 'China');   
 
-8. actor 테이블에서 서로 동일한 last_name을 사용하는 배우(actor)들이 각각 몇명인지 조회하고 싶어졌다. actor 테이블에서 last_name 컬럼과 해당 last_name을 사용하는 수를 집계해주는 컬럼을 조회해보자
+8. actor 테이블에서 서로 동일한 last_name을 사용하는 배우(actor)들이 각각 몇명인지 조회하고 싶어졌다. actor 테이블에서 last_name 컬럼과 해당 last_name을 사용하는 수를 집계해주는 컬럼을 조회해보자   
 SELECT last_name, count(last_name)   
 FROM actor   
 GROUP BY last_name;   
@@ -261,36 +261,37 @@ WHERE p.payment_date BETWEEN '2005-08-01' AND '2005-08-02' -- 날짜만 쓰면 0
 GROUP BY s.staff_id
 ORDER BY s.staff_id DESC;
 
-15. film 테이블의 별칭을 f, film_actor 테이블의 별칭을 fa로 짓고, 
-두 테이블을 연결(JOIN)하여 각 film_id가 일치하는 조건의 title 및 해당 film에 참여한 총 actor의 수를 의미하는 컬럼 ‘총 배우 수’ 컬럼을 film 테이블의 title 별로(grouping) 조회
-(단, 이대로 조회하면 결과 데이터가 총 997행이기 때문에 상위 20개의 행만 조회)
+15. film 테이블의 별칭을 f, film_actor 테이블의 별칭을 fa로 짓고,  
+두 테이블을 연결(JOIN)하여 각 film_id가 일치하는 조건의 title 및 해당 film에 참여한 총 actor의 수를 의미하는 컬럼 ‘총 배우 수’ 컬럼을 film 테이블의 title 별로(grouping) 조회   
+(단, 이대로 조회하면 결과 데이터가 총 997행이기 때문에 상위 20개의 행만 조회)   
 SELECT f.title, COUNT(fa.film_id) '총 배우 수'   
 FROM film f JOIN film_actor fa   
 ON f.film_id = fa.film_id   
 GROUP BY f.title   
 LIMIT 20;   
 
-16. inventory 테이블의 정보(description) 조회
+16. inventory 테이블의 정보(description) 조회   
 desc inventory;   
 
-17. inventory 테이블의 데이터 상위 10개 조회
+17. inventory 테이블의 데이터 상위 10개 조회  
 SELECT * FROM inventory LIMIT 10;   
 
-18. film 테이블에서 title, description 컬럼을 조회하되, 상위 20개만 조회
+18. film 테이블에서 title, description 컬럼을 조회하되, 상위 20개만 조회   
 SELECT title, description FROM film LIMIT 20;   
 
-19. ALABAMA DEVIL film이 모든 영화 대여점에 총 몇개의 복제본이 배포되어있는지 알고 싶다.
-film 테이블의 별칭을 f, inventory 테이블의 별칭을 i로 짓고, 두 테이블을 연결(JOIN)하여 
-film_id 컬럼이 일치하는 조건의 title 및 film_id의 총 개수(count)를 ‘복제본’으로 별칭을 작성하여
-title 별로 조회하되, title이 ‘ALABAMA DEVIL’인 film만 조회
+19. ALABAMA DEVIL film이 모든 영화 대여점에 총 몇개의 복제본이 배포되어있는지 알고 싶다.   
+film 테이블의 별칭을 f, inventory 테이블의 별칭을 i로 짓고, 두 테이블을 연결(JOIN)하여    
+film_id 컬럼이 일치하는 조건의 title 및 film_id의 총 개수(count)를 ‘복제본’으로 별칭을 작성하여   
+title 별로 조회하되, title이 ‘ALABAMA DEVIL’인 film만 조회   
 SELECT f.title, count(i.store_id) '복제본'   
 FROM film f JOIN inventory i   
 ON f.film_id = i.film_id   
 GROUP BY f.title   
 HAVING f.title = 'ALABAMA DEVIL';   
 
-20. 고객 별 총 사용 금액을 last_name을 오름차순 정렬하여 조회하고 싶다.
-customer 테이블의 별칭을 c, payment 테이블의 별칭을 p로 짓고, 두 테이블을 customer_id컬럼으로 연결(JOIN)하여 first_name, last_name, amount의 총 액수를 조회하되, first_name, last_name 순으로 묶어서(grouping) last_name을 기준으로 오름차순하여 조회
+20. 고객 별 총 사용 금액을 last_name을 오름차순 정렬하여 조회하고 싶다.   
+customer 테이블의 별칭을 c, payment 테이블의 별칭을 p로 짓고, 두 테이블을 customer_id컬럼으로 연결(JOIN)하여 first_name, last_name, amount의 총 액수를 조회하되,   
+first_name, last_name 순으로 묶어서(grouping) last_name을 기준으로 오름차순하여 조회    
 SELECT c.first_name, c.last_name, SUM(coalesce(p.amount, 0))   
 FROM customer c JOIN payment p   
 ON c.customer_id = p.customer_id   
