--- a/JSP/220519_JSP내용정리.md
+++ b/JSP/220519_JSP내용정리.md
@@ -150,17 +150,27 @@ public class RedirectServlet extends HttpServlet {
 ```
 ## 3. 싱글패턴과 MVC 패턴을 이용한 mouse table 읽어 들이기  :pushpin:
 
-### **[로직]**
+### **[로직]**   
+
 1. HTML에서 script 태그 안에 location 메서드를 이용해서 주소가 "board"인 ServletContainer 역할을 하는 FrontController 서블릿 자바로 넘어간다.   
-2. FrontController는 HttpServlet 인터페이스를 상속받아서 init(), service() 매서드를 재정의가 가능하다.   
-3. 이때 테이블은 HashMap클래스를 통해 문자열의 "key" 값과 자체적으로 만든 "Controller"인터페이스를 value 값으로 받는다.   
-4. 여기서 service 메서드에서  클라이언트에서 받은 파라미터 값이 없다면 HashMap 타입에서 key값인 "list" 문자열을 담는다.   
-5. 그리고 init() 메서드에서 초기화할 당시에,  list 변수에 인스턴스를 생성했고, 4번 로직에 의해서 comm이 "list"일 경우, HashMap의 "list"라는 key 인스턴스를 얻어옵니다.   
-6. 여기서 다형성의 개념으로 Controller 인터페이스에서 excute메서드를 구현 클래스인 MouseListController의 excute가 실행된다.   
-7. 그 이후에는 MouseController -> MouseService -> MouseDAO 순으로 메서드가 호출이 된다.   
-8. 물리적인 흐름은 그 반대로 데이터를 불러온다.   
-9. DBUtils 는 데이터베이스를 연결하는 JDBC 부분이다.   
-10. 그렇게 불러온 데이터를 ArrayList< Mouse > 타입의 mouseList에 담고 테이블의 4번째로 해당하는 레코드 값을 화면에 보여준다.   
+
+3. FrontController는 HttpServlet 인터페이스를 상속받아서 init(), service() 매서드를 재정의가 가능하다.   
+
+5. 이때 테이블은 HashMap클래스를 통해 문자열의 "key" 값과 자체적으로 만든 "Controller"인터페이스를 value 값으로 받는다.   
+
+7. 여기서 service 메서드에서  클라이언트에서 받은 파라미터 값이 없다면 HashMap 타입에서 key값인 "list" 문자열을 담는다.   
+
+9. 그리고 init() 메서드에서 초기화할 당시에,  list 변수에 인스턴스를 생성했고, 4번 로직에 의해서 comm이 "list"일 경우, HashMap의 "list"라는 key 인스턴스를 얻어온다.   
+
+11. 여기서 다형성의 개념으로 Controller 인터페이스에서 excute메서드를 구현 클래스인 MouseListController의 excute가 실행된다.   
+
+13. 그 이후에는 MouseController -> MouseService -> MouseDAO 순으로 메서드가 호출이 된다.  
+
+15. 물리적인 흐름은 그 반대로 데이터를 불러온다.   
+
+17. DBUtils 는 데이터베이스를 연결하는 JDBC 부분이다.   
+
+19. 그렇게 불러온 데이터를 ArrayList< Mouse > 타입의 mouseList에 담고 테이블의 4번째로 해당하는 레코드 값을 화면에 보여준다.   
 
 ### **[singleton]** 
 
