--- a/JSP/220519_JSP내용정리.md
+++ b/JSP/220519_JSP내용정리.md
@@ -29,7 +29,7 @@ public class DispatcherServlet extends HttpServlet {
 
 }
 ```
->ServletContext는 서블릿 컨테이너와 통신하기 위해서 사용되는 메소드를 지원하는 인터페이스입니다. 다음 그림과 같이 서블릿 컨테이너가 시작될 때 웹서버에 등록된 웹 애플리케이션 단위로 하나의 ServletContext 객체가 자동으로 생성됩니다. 그리고 웹 애플리케이션 서비스가 중지될 때 소멸합니다. 즉, ServletContext 객체는 웹 애플리케이션과 생명주기(life cycle)가 같습니다.   
+>ServletContext는 서블릿 컨테이너와 통신하기 위해서 사용되는 메소드를 지원하는 인터페이스이다. 다음 그림과 같이 서블릿 컨테이너가 시작될 때 웹서버에 등록된 웹 애플리케이션 단위로 하나의 ServletContext 객체가 자동으로 생성된다. 그리고 웹 애플리케이션 서비스가 중지될 때 소멸한다. 즉, ServletContext 객체는 웹 애플리케이션과 생명주기(life cycle)가 같다.   
 >getServletContext()로 ServletContext 인터페이스의 객체를 가져온다.   
 ```java
 RequestDispatcher rd = sc.getRequestDispatcher("/page2");
