--- a/JSP/220519_JSP내용정리.md
+++ b/JSP/220519_JSP내용정리.md
@@ -148,7 +148,7 @@ public class RedirectServlet extends HttpServlet {
 </body>
 </html>
 ```
-## 3. 싱글패턴과 MVC 패턴을 이용한 mouse table 읽어 들이기  :pushpin:
+## 3. Singleton 패턴과 MVC 패턴을 이용한 mouse table 읽어 들이기  :pushpin:
 
 ### **[로직]**   
 
