--- a/Hadoop/220830_DB전송.md
+++ b/Hadoop/220830_DB전송.md
@@ -79,8 +79,10 @@ subway.to_sql(name = "subway_2016", con = engine,  if_exists= 'replace', index=F
 - 만약  파일 권한을 ec2-user가 되어있다면?
 	- chown hadoop:hadoop *.jar && mv *.jar /home/hadoop/sqoop/lib/
 - /.bashrc 파일에서 sqoop설정(vi ~/.bashrc)
-	- export SQOOP_HOME=/home/hadoop/sqoop
-	-export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin:$HIVE_HOME/bin:$SQOOP_HOME/bin
+```
+export SQOOP_HOME=/home/hadoop/sqoop
+export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin:$HIVE_HOME/bin:$SQOOP_HOME/bin
+```
 - source .bashrc 로 최신화 시켜주기
 - namenode mysql 권한 풀어주기
 	- ssh namenode
